# mhxy-bot-win10

./: .gitignore  README.md  package.json  requirements.txt
.github/workflows/: build-tauri-macos.yml  build-tauri-windows.yml  build-win-exe.yml
app/: launcher.py
app/core/: config.py  logger.py  pathing.py  state.py  task_registry.py
app/navigation/: route_engine.py
app/tasks/: dig_state_machine.py  dig_treasure.py  ghost_hunt_leader.py  master_task.py  task_blueprints.py
app/ui/: app.js  index.html  style.css
app/vision/: ocr_service.py  template_service.py
app/window/: __init__.py  window_service.py
config/: default.yaml  task_blueprints.override.json
config/routes/dig/: default.yaml
config/templates/: dig-ui.example.yaml
docs/: PLAN.md  V0-PROTOTYPE.md  V1-NEXT-STEPS.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: app-icon.icns
src-tauri/src/: main.rs
