[package]
name = "mhxy-bot-win10-tauri"
version = "0.4.0"
description = "Tauri desktop shell for mhxy-bot-win10"
authors = ["jtnetcc"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
